[GTK] Fix libappindicator library name for dlopen()

STRINGIZE(GTK_MAJOR_VERSION) evaluates to "(3)", so we previously tried to open
"libappindicator(3).so.1" when we wanted to open "libappindicator3.so.1".

BUG=893932
R=pkasting

Change-Id: I91544994898ae136c404a88a561e8f789c801c62
Reviewed-on: https://chromium-review.googlesource.com/c/1308670
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604065}
Former-commit-id: 7e85c0922ce2aa01c8e2fad91afd18eb000019b7